[package]
name = "physpatch"
version = "0.1.0"
authors = ["sonodima"]
edition = "2021"

description = "PhysPatch performs physical memory scanning and patching of the entire Windows Kernel using DMA"
readme = "README.md"
homepage = "https://github.com/sonodima/physpatch"
repository = "https://github.com/sonodima/physpatch"
license = "MIT"

keywords = ["memory", "memflow", "patch", "windows", "kernel"]
categories = ["command-line-utilities", "virtualization"]


[dependencies]
clap = { version = "4.2.4", features = [ "derive" ] }
memflow = "0.2.0-beta10"
memflow-qemu = "0.2.0-beta10"
memflow-win32 = "0.2.0-beta10"
x86 = "0.52.0"
aobscan = "0.3.0"
hex = "0.4.3"
colored = "2.0.0"
