[package]
name = "physpatch"
version = "0.2.1"
authors = ["sonodima"]
edition = "2021"

description = "PhysPatch performs physical memory scans and patches of the entire Windows kernel"
readme = "README.md"
homepage = "https://github.com/sonodima/physpatch"
repository = "https://github.com/sonodima/physpatch"
license = "MIT"

keywords = ["memory", "memflow", "patch", "windows", "kernel"]
categories = ["command-line-utilities", "virtualization"]


[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
aobscan = "0.3"
x86 = "0.52"
hex = "0.4"
memflow = "0.2.3"
memflow-qemu = "0.2.1"
memflow-win32 = "0.2.0"


[profile.dev.package.aobscan]
opt-level = 3
